name:               private-xmonad
version:            0.13
homepage:           http://xmonad.org
synopsis:           A tiling window manager
description:
    xmonad is a tiling window manager for X. Windows are arranged
    automatically to tile the screen without gaps or overlap, maximising
    screen use. All features of the window manager are accessible from
    the keyboard: a mouse is strictly optional. xmonad is written and
    extensible in Haskell. Custom layout algorithms, and other
    extensions, may be written by the user in config files. Layouts are
    applied dynamically, and different layouts may be used on each
    workspace. Xinerama is fully supported, allowing windows to be tiled
    on several screens.
category:           System
license:            BSD3
license-file:       LICENSE
author:             Spencer Janssen
maintainer:         xmonad@haskell.org
extra-source-files: README.md CHANGES.md CONFIG STYLE
                    tests/*.hs
                    tests/Properties/*.hs
                    tests/Properties/Layout/*.hs
                    man/xmonad.1.markdown man/xmonad.1 man/xmonad.1.html
                    util/GenerateManpage.hs
                    util/hpcReport.sh
cabal-version:      >= 1.8
bug-reports:        https://github.com/xmonad/xmonad/issues
build-type:         Simple

tested-with:
                    GHC==7.6.3,
                    GHC==7.8.4,
                    GHC==7.10.3,
                    GHC==8.0.1

data-files:         man/xmonad.hs, man/xmonad.1, man/xmonad.1.html

source-repository head
  type:     git
  location: https://github.com/xmonad/xmonad


executable xmonad
    main-is:        Main.hs
    build-depends:  base,
                    containers,
                    xmonad-contrib,
                    xmonad
    ghc-options:    -Wall
    if impl(ghc >= 6.12.1)
        ghc-options:  -Wall -fno-warn-unused-do-bind

